--- a/basic/templates/basic/blog.html
+++ b/basic/templates/basic/blog.html
@@ -14,7 +14,7 @@
             <div class="row">
                 <div class="col-md-3"></div>
                 <div class="col-md-6 blog-content-first">
-                    <img src = "{% static ''%}{{b.image_path}}" width="630px">
+                    <img src="{{b.image_path}}" width="630px">
                 </div>
                 <div class="col-md-3"></div>
             </div>
