--- a/basic/templates/basic/detail.html
+++ b/basic/templates/basic/detail.html
@@ -13,7 +13,7 @@
             <div class = "row">
                 <div class = "col-md-3"></div>
                 <div class = "col-md-6 blog-content-first">
-                    <img src ="{% static ''%}{{blog.image_path}}" width="630px">
+                    <img src ="{{blog.image_path}}" width="630px">
                 </div>
                 <div class = "col-md-3"></div>
             </div>
