--- a/basic/templates/basic/input_content.html
+++ b/basic/templates/basic/input_content.html
@@ -11,13 +11,13 @@
     <div class="container-fluid input justify-content-center">
         <div class = "row">
             <div class = "col-md-12 justify-content-center">
-            <form action="{% url 'basic:save_content'%}" method="POST">
+            <form action="{% url 'basic:save_content' %}" method="POST">
                 {% csrf_token %}
                 <div>
                     <p>
                         <label for="img_path">Input Image URL:</label>
                         <br>
-                        <input type="text" id="img_path" name="img_path" placeholder="img/image_address" required />
+                        <input type="text" id="img_path" name="image_path" placeholder="img/image_address" required />
                     </p>
                     <p>
                         <label for="blog_title">Input Title:</label>
